Fix a minor bug

--- a/notebooks/sar2optical_train.ipynb
+++ b/notebooks/sar2optical_train.ipynb
@@ -1213,7 +1213,7 @@
     "\n",
     "        generated_images = (generated_images + 1) / 2  # Rescale to [0, 1]\n",
     "        if to_uint8:\n",
-    "            generated_images = (generated_images* 255).astype(torch.uint8)  # Scale to [0, 255] and convert to uint8\n",
+    "            generated_images = (generated_images* 255).to(dtype=torch.uint8)  # Scale to [0, 255] and convert to uint8\n",
     "        \n",
     "        return generated_images\n",
     "\n",
@@ -1478,6 +1478,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment here if you want to load a checkpoint\n",
+    "# gen_path = 'path.pth'\n",
+    "# disc_path = 'path.pth'\n",
+    "# model.load_model(gen_path=gen_path,disc_path=disc_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1532,8 +1544,8 @@
    "outputs": [],
    "source": [
     "# Root Path\n",
-    "root_dir = '/kaggle/input/sentinel12-image-pairs-segregated-by-terrain/v_2'\n",
-    "split_save_path = '/kaggle/working/split.json'\n",
+    "root_dir = './data/v_2'\n",
+    "split_save_path = './data/split.json'\n",
     "# Load the custom dataset\n",
     "train_transforms = v2.Compose([\n",
     "    v2.ToImage(),\n",
@@ -1556,7 +1568,33 @@
     "    batch_size=PARAMS['batch_size'], \n",
     "    shuffle=True, \n",
     "    num_workers=4\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "\"\"\" # Uncomment here if you want to use validation set\n",
+    "val_transforms = v2.Compose([\n",
+    "    v2.ToImage(),\n",
+    "    v2.ToDtype(torch.float32, scale=True),\n",
+    "    v2.Normalize(mean=[0.5], std=[0.5]),\n",
+    "])\n",
+    "\n",
+    "dataset_val = Sentinel(\n",
+    "    root_dir=root_dir, \n",
+    "    split_type='val', \n",
+    "    transform=val_transforms, \n",
+    "    split_mode='random',\n",
+    "    split_ratio=(0.8,0.1,0.1),\n",
+    "    seed=SEED\n",
+    "    )\n",
+    "\n",
+    "dataset_val.save_split(output_file=split_save_path, is_exists=True)\n",
+    "\n",
+    "dataloader_val = DataLoader(\n",
+    "    dataset_val, \n",
+    "    batch_size=PARAMS['batch_size'], \n",
+    "    shuffle=True, \n",
+    "    num_workers=4\n",
+    "    )\n",
+    "\"\"\""
    ]
   },
   {
@@ -1577,6 +1615,7 @@
     "# Train the model\n",
     "num_epochs = PARAMS['epochs']\n",
     "len_batch = len(dataloader)\n",
+    "# len_batch_val = len(dataloader_val) # Uncomment here if you want to use validation set\n",
     "save_freq = 5\n",
     "base_path = '/kaggle/working/'\n",
     "for epoch in range(1, num_epochs+1):\n",
@@ -1584,6 +1623,7 @@
     "    total_lossG = 0.0\n",
     "    total_lossG_GAN = 0.0\n",
     "    total_lossG_L1 = 0.0\n",
+    "    model.train()\n",
     "    for real_images, target_images in dataloader:\n",
     "        real_images, target_images = real_images.to(DEVICE), target_images.to(DEVICE)\n",
     "        losses = model.train_step(real_images, target_images)\n",
@@ -1591,11 +1631,36 @@
     "        total_lossG += losses['loss_G']\n",
     "        total_lossG_GAN += losses['loss_G_GAN']\n",
     "        total_lossG_L1 += losses['loss_G_L1']\n",
-    "        \n",
+    "\n",
+    "    \"\"\" # Uncomment here if you want to use validation set\n",
+    "    total_lossD_val = 0.0\n",
+    "    total_lossG_val = 0.0\n",
+    "    total_lossG_GAN_val = 0.0\n",
+    "    total_lossG_L1_val = 0.0\n",
+    "    model.eval()\n",
+    "    for real_images, target_images in dataloader_val:\n",
+    "        real_images, target_images = real_images.to(DEVICE), target_images.to(DEVICE)\n",
+    "        losses = model.validation_step(real_images, target_images)\n",
+    "        total_lossD_val += losses['loss_D']\n",
+    "        total_lossG_val += losses['loss_G']\n",
+    "        total_lossG_GAN_val += losses['loss_G_GAN']\n",
+    "        total_lossG_L1_val += losses['loss_G_L1']\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Train    \n",
     "    loss_D = total_lossD / len_batch\n",
     "    loss_G = total_lossG / len_batch\n",
     "    loss_G_GAN = total_lossG_GAN / len_batch\n",
     "    loss_G_L1 = total_lossG_L1 / len_batch\n",
+    "\n",
+    "    \"\"\" # Uncomment here if you want to use validation set\n",
+    "    # Val\n",
+    "    loss_D_val = total_lossD_val / len_batch_val\n",
+    "    loss_G_val = total_lossG_val / len_batch_val\n",
+    "    loss_G_GAN_val = total_lossG_GAN_val / len_batch_val\n",
+    "    loss_G_L1_val = total_lossG_L1_val / len_batch_val\n",
+    "    \"\"\"\n",
+    "\n",
     "    # Log the losses\n",
     "    print(f\"Epoch [{epoch}/{num_epochs}] - Loss_D: {loss_D:.4f}, Loss_G: {loss_G:.4f}\")\n",
     "    experiment.log_metrics(\n",
@@ -1609,12 +1674,24 @@
     "        step=epoch\n",
     "        )\n",
     "    \n",
-    "    if epoch % save_freq == 0:\n",
-    "        ckpt_path = base_path + f'pix2pix_gen_ckpt_{epoch+1}.pt'\n",
-    "        torch.save(model.gen.state_dict(), ckpt_path)\n",
-    "        ckpt_path = base_path + f'pix2pix_disc_ckpt_{epoch+1}.pt'\n",
-    "        torch.save(model.disc.state_dict(), ckpt_path)\n",
+    "    \"\"\" # Uncomment here if you want to use validation set\n",
+    "    print(f\"Epoch [{epoch}/{num_epochs}] - Val Loss_D: {loss_D_val:.4f}, Val Loss_G: {loss_G_val:.4f}\")\n",
+    "    experiment.log_metrics(\n",
+    "        {\n",
+    "            'epoch': epoch, \n",
+    "            'val_lossD': loss_D_val,\n",
+    "            'val_lossG' : loss_G_val,\n",
+    "            'val_lossG_GAN' : loss_G_GAN_val,\n",
+    "            'val_lossG_L1' : loss_G_L1_val\n",
+    "        }, \n",
+    "        step=epoch\n",
+    "        )\n",
+    "    \"\"\"\n",
     "    \n",
+    "    if epoch % save_freq == 0:\n",
+    "        gen_path = base_path + f'pix2pix_gen_ckpt_{epoch+1}.pt'\n",
+    "        disc_path = base_path + f'pix2pix_disc_ckpt_{epoch+1}.pt'\n",
+    "        model.save_model(gen_path=gen_path,disc_path=disc_path)\n",
     "        \n",
     "experiment.end()"
    ]
